<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.dineshbalajivenkataraman.scoreboardapp.ScoreBoard">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/teamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.48"
                android:text="@string/team_a"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/teamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/team_b"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_green_light"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="false"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/teamAScore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.03"
                android:text="@string/initial_team_a_score"
                android:textAlignment="center"
                android:textSize="120sp" />
            <TextView
                android:id="@+id/teamBScore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/initial_team_b_score"
                android:textAlignment="center"
                android:textSize="120sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/a_1_point"
                style="@style/OrangeButtonStyle"
                android:text="@string/plus_1_point_a"
                android:textAlignment="center" />
            <Button
                android:id="@+id/b_1_point"
                style="@style/GreenButtonStyle"
                android:text="@string/plus_1_point_b" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/a_3_point"
                style="@style/OrangeButtonStyle"
                android:text="@string/plus_3_point_a" />
            <Button
                android:id="@+id/b_3_point"
                style="@style/GreenButtonStyle"
                android:text="@string/plus_3_point_b" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/a_5_point"
                style="@style/OrangeButtonStyle"
                android:text="@string/plus_5_point_a" />
            <Button
                android:id="@+id/b_5_point"
                style="@style/GreenButtonStyle"
                android:text="@string/plus_5_point_b" />
        </LinearLayout>
        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetMe"
            android:text="@string/reset_name" />
    </LinearLayout>
</ScrollView>